--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "discord-akairo-boilerplate",
+  "name": "Restream",
   "version": "1.0.0",
-  "description": "Shiptunes discord bot. Plays music and is probably best bot for nodejs ;-)",
+  "description": "Restream",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -12,6 +12,6 @@
   "author": "Kyle Suttlemyre",
   "license": "ISC",
   "dependencies": {
-    "node-media-servere": "2.3.8",
+    "node-media-servere": "2.3.8"
   }
 }
