--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "ffmpeg-static": "^4.4.0",
-    "node-media-server": "^2.3.8",
+    "node-media-server": "^2.3.8"
   }
 }
